--- a/deploy/index.html
+++ b/deploy/index.html
@@ -12,7 +12,7 @@
             rel="stylesheet">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
         <link rel="stylesheet" href="css/styles.css">
-        <title>Capstone Demo</title>
+        <title>Capstone Demo - Carousel</title>
     </head>
 <body>
 
@@ -42,11 +42,17 @@
 
     <section id="gallery" class="content">
         <div>
-            <ul>    
+            <section class="carousel">
+                <div id='gallery-1' class="carousel__slide"><img src="img/gallery/gallery-1.jpg" alt="gallery-1"></div>
+                <div id='gallery-2' class="carousel__slide"><img src="img/gallery/gallery-2.jpg" alt="gallery-2"></div>
+                <div id='gallery-3' class="carousel__slide"><img src="img/gallery/gallery-3.jpg" alt="gallery-3"></div>
+            </section>
+    
+            <!-- <ul>    
                 <li id='gallery-1'><a href="img/gallery/gallery-1.jpg" data-fancybox="gallery"></a></li>
                 <li id='gallery-2'><a href="img/gallery/gallery-2.jpg" data-fancybox="gallery"></a></li>
                 <li id='gallery-3'><a href="img/gallery/gallery-3.jpg" data-fancybox="gallery"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </section>
 
