--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,13 +17,18 @@
 
 <body>
     <header>
-        <div>
-            <section><img src="img/header/logo.svg" alt="Harley Davidson logo" class="nav-button"></section>
-            <nav><ul>
-                <li><button class="nav-button">believe</button></li>
-                <li><button class="nav-button">gallery</button></li>
-                <li><button class="nav-button">callout</button></li>
-            </ul></nav>
+        <div id="header-content">
+            <section id="logo"><img src="img/header/logo.svg" alt="Harley Davidson logo" class="nav-button"></section>
+            <section id="burger">
+                <i id="burger-button" class="far fa-bars"></i>
+            </section>
+            <nav>
+                <ul>
+                    <li><button class="nav-button">believe</button></li>
+                    <li><button class="nav-button">gallery</button></li>
+                    <li><button class="nav-button">callout</button></li>
+                </ul>
+            </nav>
     
         </div>
     </header>
