--- a/deploy/index.html
+++ b/deploy/index.html
@@ -10,7 +10,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Nunito:wght@500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap"
             rel="stylesheet">
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
         <link rel="stylesheet" href="css/styles.css">
         <title>Capstone Demo</title>
     </head>
@@ -43,9 +43,9 @@
     <section id="gallery" class="content">
         <div>
             <ul>    
-                <li id='gallery-1'><a href="img/gallery/gallery-1.jpg" data-fancybox="gallery"></a></li>
-                <li id='gallery-2'><a href="img/gallery/gallery-2.jpg" data-fancybox="gallery"></a></li>
-                <li id='gallery-3'><a href="img/gallery/gallery-3.jpg" data-fancybox="gallery"></a></li>
+                <li id='gallery-1'><a href="img/gallery/gallery-1.jpg" data-fancybox="gallery-1" data-caption="Optional caption"></a></li>
+                <li id='gallery-2'><a href="img/gallery/gallery-2.jpg" data-fancybox="gallery-2"></a></li>
+                <li id='gallery-3'><a href="img/gallery/gallery-3.jpg" data-fancybox="gallery-1"></a></li>
             </ul>
         </div>
     </section>
