--- a/deploy/index.html
+++ b/deploy/index.html
@@ -20,7 +20,7 @@
         <div id="header-content">
             <section id="logo"><img src="img/header/logo.svg" alt="Harley Davidson logo" class="nav-button"></section>
             <section id="burger">
-                <i id="burger-button" class="far fa-bars"></i>
+                <i id="burger-button" class="far fa-bars"></i> 
             </section>
             <nav>
                 <ul>
@@ -29,7 +29,6 @@
                     <li><button class="nav-button">callout</button></li>
                 </ul>
             </nav>
-    
         </div>
     </header>
 
@@ -93,7 +92,7 @@
             </section>
             <aside>
                 <ul>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 </ul>
